force-app/main/default/objects/Survey__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Проставляется если опрос был пройден полностью</description>
    <label>IsComplete</label>
    <type>Checkbox</type>
</CustomField>