force-app/main/default/objects/Survey__c/fields/SurveyTemplateName__c.field-meta.xml
<CustomField>
    <fullName>SurveyTemplateName__c</fullName>
    <description>DeveloperName шаблона опросника.</description>
    <label>SurveyTemplateName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>